--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -96,7 +96,7 @@
 
           <div class="form-group mt-4">
             <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" class="form-control" required>
+            <input type="text" id="customer_name" name="customer_name" class="form-control" required>
           </div>
 
           <div class="form-group mt-4">
@@ -106,12 +106,12 @@
 
           <div class="form-group mt-4">
             <label for="phone">Your Phone Number:</label>
-            <input type="tel" id="phone" name="phone" class="form-control" required>
+            <input type="tel" id="phone_number" name="phone_number" class="form-control" required>
           </div>
 
           <div class="form-group mt-4">
             <label for="address">Installation Address:</label>
-            <input type="text" id="address" name="address" class="form-control" required>
+            <input type="text" id="installation_address" name="installation_address" class="form-control" required>
           </div>
 
           <div class="form-group mt-4">
@@ -133,7 +133,7 @@
 
           <div class="form-group mt-4">
             <label for="message">Additional Message:</label>
-            <textarea id="message" name="message" rows="4" class="form-control"></textarea>
+            <textarea id="additional_message" name="additional_message" rows="4" class="form-control"></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary mt-4" onclick="sendMessage(event)" >Submit</button>
