--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -165,7 +165,7 @@
                   document.getElementById("successquote").textContent = xhr.responseText; // Display the response text
                   document.getElementById("successquote").classList.remove("d-none"); // Make the element visible
                   // You can optionally reset the form here
-                  document.getElementById("contactform").reset();
+                  document.getElementById("quoteform").reset();
                 } else {
                   // Show the error message
                   document.getElementById("successquote").textContent = "An error occurred. Please try again.";
