--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -88,6 +88,9 @@
       <h1 class="logo me-auto me-lg-0"><a href="index.html">csg</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a class="navbar-brand" href="index.html">
+          <img src="assets/img/logo.png" alt="Logo" class="navbar-logo">
+      </a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
