--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -124,8 +124,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Powering Change <span>.</span></h1>
-          <h2>Harness the Power of the Sun
+          <h1>Powering Change with Solar Solutions<span>.</span></h1>
+          <h2>Harness the Power of the Sun for Your Home or Business, While Saving Money and the Environment
           </h2>
         </div>
       </div>
