--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -34,7 +34,11 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-
+  <style>
+      .navbar-logo {
+          margin-right: 10px;
+      }
+  </style>
 
 </head>
 
@@ -43,8 +47,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-lg-between">
-
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">csg</a></h1>
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/img/logo.png" alt="Logo" class="navbar-logo" style="max-height: 100px; max-width: 100%;">
+      </a>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
