--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -134,19 +134,19 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="electricity_bill_offset.html">100% Electricity Bill Offset</a></h3>
+            <h3><a href="electricity_bill_offset.jsp">100% Electricity Bill Offset</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="tax_credit.html">30% Tax Credit</a></h3>
+            <h3><a href="tax_credit.jsp">30% Tax Credit</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-money-dollar-circle-line"></i>
-            <h3><a href="increased_home_value.html">3-4% Increased Home Value</a></h3>
+            <h3><a href="increased_home_value.jsp">3-4% Increased Home Value</a></h3>
           </div>
         </div>
       </div>
@@ -266,7 +266,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="solar_consultation.html">Solar Consultation</a></h4>
+              <h4><a href="solar_consultation.jsp">Solar Consultation</a></h4>
               <p>
                 This service includes a thorough evaluation of the customer's energy needs, site assessment, and solar potential. They provide customized solar system recommendations based on the customer's unique requirements, budget, and preferences.
               </p>
@@ -286,7 +286,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="solar_installations.html">Solar Installations</a></h4>
+              <h4><a href="solar_installations.jsp">Solar Installations</a></h4>
               <p>
                 California Solar Group's team of certified and experienced installers ensure that the solar systems are installed safely, efficiently, and according to the highest industry standards. They handle all aspects of the installation process, from permitting to system commissioning.
               </p>
@@ -296,7 +296,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="solar_financing.html">Solar Financing</a></h4>
+              <h4><a href="solar_financing.jsp">Solar Financing</a></h4>
               <p>
                 The company offers various financing options to make solar energy more accessible to their customers. They can help clients navigate through solar incentives, rebates, and tax credits, as well as providing flexible payment plans and competitive solar loan options.
               </p>
@@ -306,7 +306,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="solar_maintenance_and_monitoring.html">Solar Maintenance and Monitoring</a></h4>
+              <h4><a href="solar_maintenance_and_monitoring.jsp">Solar Maintenance and Monitoring</a></h4>
               <p>
                 To ensure optimal system performance and longevity, California Solar Group offers comprehensive maintenance and monitoring services. These services include routine system checks, performance monitoring, and addressing any potential issues that may arise over the system's lifespan.
               </p>
@@ -316,7 +316,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="commercial_solar_solutions.html">Commercial Solar Solutions</a></h4>
+              <h4><a href="commercial_solar_solutions.jsp">Commercial Solar Solutions</a></h4>
               <p>
                 California Solar Group also caters to the unique energy needs of commercial customers. They offer customized solar solutions for businesses of all sizes, from small retail shops to large industrial facilities, helping them reduce energy costs and achieve their sustainability goals.
               </p>
