--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -925,14 +925,14 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="solar_consultation.html">Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="solar_system_design.html">Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="solar_installations.html">Installations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="solar_financing.html">Financing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="solar_maintenance_and_monitoring.html">Maintenance and Monitoring</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_consultation.jsp">Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_system_design.jsp">Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_installations.jsp">Installations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_financing.jsp">Financing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_maintenance_and_monitoring.jsp">Maintenance and Monitoring</a></li>
             </ul>
           </div>
-          <a name="subscribe"
+
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
