--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -375,7 +375,7 @@
                 <p>Residential</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -389,7 +389,7 @@
                 <p>Industrial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -403,7 +403,7 @@
                 <p>Residential</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -417,7 +417,7 @@
                 <p>Commercial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -431,7 +431,7 @@
                 <p>Industrial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -445,7 +445,7 @@
                 <p>Residential</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -459,7 +459,7 @@
                 <p>Commercial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -473,7 +473,7 @@
                 <p>Commercial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -487,7 +487,7 @@
                 <p>Industrial</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
