--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -374,7 +374,7 @@
                 <h4>Residential 1</h4>
                 <p>Residential</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -388,7 +388,7 @@
                 <h4>Industrial 3</h4>
                 <p>Industrial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Industrial 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -402,7 +402,7 @@
                 <h4>Residential 2</h4>
                 <p>Residential</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -416,7 +416,7 @@
                 <h4>Commercial 2</h4>
                 <p>Commercial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Commercial 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -430,7 +430,7 @@
                 <h4>Industrial 2</h4>
                 <p>Industrial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Industrial 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -444,7 +444,7 @@
                 <h4>Residential 3</h4>
                 <p>Residential</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -458,7 +458,7 @@
                 <h4>Commercial 1</h4>
                 <p>Commercial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Commercial 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -472,7 +472,7 @@
                 <h4>Commercial 3</h4>
                 <p>Commercial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Commercial 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -486,7 +486,7 @@
                 <h4>Industrial 3</h4>
                 <p>Industrial</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Industrial 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
