--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -125,7 +125,7 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Powering Change with Solar Solutions<span>.</span></h1>
-          <h2>Harness the Power of the Sun for Your Home or Business, While Saving Money and the Environment
+          <H2>Harness the Power of the Sun for Your Home or Business With Our Solar Panels, While Saving Money and the Environment
           </h2>
         </div>
       </div>
@@ -792,6 +792,9 @@
                 <h4>casolargroup<span>.</span>io</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406, USA
+                </p>
+                <p>
+                    208 S Grand Ave, Santa Ana, CA 92701, USA
                 </p>
               </div>
 
