--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -113,7 +113,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="signup.jsp" class="get-started-btn scrollto">Get Started</a>
+      <a href="get_quote.jsp" class="get-started-btn scrollto">Get Quote</a>
 
     </div>
   </header><!-- End Header -->
@@ -334,14 +334,13 @@
 
         <div class="text-center">
           <h3>
-            Get Your Free Quote for a Brighter, Greener Future!
-            </h3>
+            Power up with California Solar Group's Customer Portal: Go Solar, Save, Connect!
+          </h3>
           <p>
-           Discover the benefits of solar energy with California Solar Group. Request a free quote for solar panel installation, tailored financing options, and expert guidance. Save money, reduce your carbon footprint, and enjoy clean, renewable power. #CaliforniaSolarGroup #FreeQuote #SolarPanels #CleanEnergy
+            Join California Solar Group's Customer Portal for a powerful solar experience. Save with personalized insights, connect with our experts, and access exclusive offers. Go solar and embrace a brighter future today!
           </p>
-          <a class="cta-btn" href="get_quote.jsp">Get Quote</a>
+          <a class="cta-btn" href="signup.jsp">Customer Portal</a>
         </div>
-
       </div>
     </section><!-- End Cta Section -->
 
