--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -339,7 +339,7 @@
           <p>
             Join California Solar Group's Customer Portal for a powerful solar experience. Save with personalized insights, connect with our experts, and access exclusive offers. Go solar and embrace a brighter future today!
           </p>
-          <a class="cta-btn" href="signup.jsp">Customer Portal</a>
+          <a class="cta-btn" href="signup.jsp">Sign-Up</a>
         </div>
       </div>
     </section><!-- End Cta Section -->
