--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -980,15 +980,14 @@
 
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKFC9Y68DP"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z267KV90QY"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-MKFC9Y68DP');
+    gtag('config', 'G-Z267KV90QY');
   </script>
-
 
 </body>
 
