--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -81,6 +81,11 @@
           margin-right: 10px;
       }
   </style>
+  <script src="https://cdn.jsdelivr.net/ally.js/1.4.1/ally.min.js"></script>
+  <script>
+    console.log('loaded ally.js in version', ally.version);
+    console.log('focusable elements', ally.query.focusable());
+  </script>  
 </head>
 
 <body>
