--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -988,7 +988,7 @@
 
     gtag('config', 'G-Z267KV90QY');
   </script>
-  <script src="https://cdn.jsdelivr.net/ally.js/1.4.1/ally.min.js"></script>
+  <script src="assets/js/ally.min.js"></script>
   <script>
     console.log('loaded ally.js in version', ally.version);
     console.log('focusable elements', ally.query.focusable());
