--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -997,7 +997,7 @@
         link: 'https://casolargroup.io/your-accessibility-declaration.pdf',
         contact: 'mailto:info@casolargroup.com',
         buttonPosition: 'right', // default is 'left'
-        forceLang: 'ru-RU' // default is 'en' may be 'he-IL', 'ru-RU', or 'fr_FR'
+        forceLang: 'en-EN' // default is 'en' may be 'he-IL', 'ru-RU', or 'fr_FR'
       });
     }
   </script>
