--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -996,7 +996,7 @@
       window.micAccessTool = new MicAccessTool({
         link: 'https://casolargroup.io/your-accessibility-declaration.pdf',
         contact: 'mailto:info@casolargroup.com',
-        buttonPosition: 'right', // default is 'left'
+        buttonPosition: 'left', // default is 'left'
         forceLang: 'en-EN' // default is 'en' may be 'he-IL', 'ru-RU', or 'fr_FR'
       });
     }
