--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -166,24 +166,24 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>
-              California Solar Group provides affordable solar solutions to homes and businesses in California.
+              Every hour, the Earth receives enough energy from the Sun, capable of fueling our society for an entire year. At California Solar Group, we believe in harnessing this abundant source of renewable energy to drive a clean and sustainable revolution.
             </h3>
             <p class="fst-italic">
-              California Solar Group helps customers transition to solar energy seamlessly with expert installation, maintenance, storage, and financing options.
+              We’ll help you transition to solar energy seamlessly with expert installation, maintenance, storage, and financing options.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>
-                California Solar Group offers a range of customizable solar solutions tailored to the unique energy needs and goals of its customers, including solar panel installation, solar battery storage, EV charging stations, and more.
+                We offer a range of customizable solar solutions tailored to your unique energy needs and goals, including solar panel installation, solar battery storage, EV charging stations, and more!
               </li>
               <li><i class="ri-check-double-line"></i>
-                The company is committed to using only the highest quality solar equipment and technologies, sourced from reputable manufacturers and backed by comprehensive warranties and guarantees.
+                We are committed to using only the highest quality solar equipment and technologies, sourced from reputable manufacturers and backed by comprehensive warranties and guarantees.
               </li>
               <li><i class="ri-check-double-line"></i>
-                California Solar Group is dedicated to customer satisfaction with personalized consultations, transparent pricing, and ongoing support for optimal solar system performance.
+                We are dedicated to customer satisfaction with personalized consultations, transparent pricing, and ongoing support for optimal solar system performance.
               </li>
             </ul>
             <p>
-              At California Solar Group, we believe that solar energy is the future, and we are passionate about helping our customers reap the many benefits of this sustainable and cost-effective energy source.
+              Join us on this exciting journey towards a brighter and sustainable future. Explore our website to discover the power of solar energy, learn about our innovative solutions, and see how you can become part of the solar revolution. Together, let's unlock the immense potential of the sun and create a world powered by clean, renewable energy.
             </p>
           </div>
         </div>
