--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -166,7 +166,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>
-              Every hour, the Earth receives enough energy from the Sun, capable of fueling our society for an entire year. At California Solar Group, we believe in harnessing this abundant source of renewable energy to drive a clean and sustainable revolution.
+              Every hour, the Earth receives enough energy from the Sun, capable of fueling our society for an entire year.
             </h3>
             <p class="fst-italic">
               We’ll help you transition to solar energy seamlessly with expert installation, maintenance, storage, and financing options.
