--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -259,7 +259,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Check our Services</p>
+          <p>Our Services</p>
         </div>
 
         <div class="row">
@@ -350,7 +350,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Check our Portfolio</p>
+          <p>Our Portfolio</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -643,7 +643,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Check our Team</p>
+          <p>Our Team</p>
         </div>
 
         <div class="row">
