--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -515,7 +515,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-emoji-smile"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="2500" data-purecounter-duration="2" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="2500" data-purecounter-duration="2" class="purecounter"></span>+
                     <p><strong>Happy Clients</strong>
                       We have worked with a wide range of clients over the years, and we are proud to have received positive feedback from all of them.
                     </p>
