--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -192,6 +192,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
+    <!--
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
@@ -210,7 +211,9 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>
+    -->
+    <!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
