--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -732,8 +732,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>To Be Determined (Hiring)</h4>
-                <span>Chief financial officer</span>
+                <h4>Aram Ovakimyan</h4>
+                <span>Vice-President</span>
               </div>
             </div>
           </div>
@@ -761,8 +761,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>To Be Determined (Hiring)</h4>
-                <span>Installation department</span>
+                <h4>Logan Weinberg</h4>
+                <span>Permit Coordinator</span>
               </div>
             </div>
           </div>
