--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -712,7 +712,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.png" id="image_3" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" id="image_3" class="img-fluid" alt="">
                 <script>
                   var image3 = document.getElementById("image_3");
 
@@ -721,7 +721,7 @@
                   });
 
                   image3.addEventListener("mouseout", function() {
-                    image3.src = "assets/img/team/team-3.png";
+                    image3.src = "assets/img/team/team-3.jpg";
                   });
                 </script>
                 <div class="social">
@@ -741,7 +741,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-4.png" id="image_4" class="img-fluid" alt="">
+                <img src="assets/img/team/team-4.jpg" id="image_4" class="img-fluid" alt="">
                 <script>
                   var image4 = document.getElementById("image_4");
 
@@ -750,7 +750,7 @@
                   });
 
                   image4.addEventListener("mouseout", function() {
-                    image4.src = "assets/img/team/team-4.png";
+                    image4.src = "assets/img/team/team-4.jpg";
                   });
                 </script>
                 <div class="social">
