--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -109,7 +109,7 @@
           </li>
           <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto" href="tel:888045950">(888) 804-5950</a></li>
+          <li><a class="nav-link scrollto" href="tel:8888045950">(888) 804-5950</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -803,7 +803,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@casolargroup.io</p>
+                <p>info@casolargroup.com</p>
               </div>
 
               <div class="phone">
