--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -109,7 +109,7 @@
           </li>
           <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto" href="tel:8888045950">(888) 804-5950</a></li>
+          <li><a class="nav-link scrollto" href="tel:8449160002">(844) 916-0002</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -809,7 +809,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>(888) 804-5950</p>
+                <p>(844) 916-0002</p>
               </div>
 
             </div>
@@ -905,8 +905,8 @@
               <p>
                 7647 Hayvenhurst Ave, Unit 26, <br>
                 Van Nuys, CA 91406, USA<br>
-                <strong>Phone:</strong> (888) 804-5950<br>
-                <strong>Email:</strong> info@casolgroup.io<br>
+                <strong>Phone:</strong> (844) 916-0002<br>
+                <strong>Email:</strong> info@casolgroup.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://twitter.com/casolargroup158" class="twitter"><i class="bx bxl-twitter"></i></a>
