--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -901,7 +901,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>California Solar Group</h3>
-              <p>casolargroup<span>.</span>io</p>
+              <p>casolargroup<span>.</span>com</p>
               <p>
                 7647 Hayvenhurst Ave, Unit 26, <br>
                 Van Nuys, CA 91406, USA<br>
