--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -791,7 +791,7 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>casolargroup<span>.</span>io</h4>
+                <h4>casolargroup<span>.</span>com</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406, USA
                 </p>
