--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -791,10 +791,14 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>casolargroup<span>.</span>com</h4>
+                <h4>Los Angeles</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406, USA
                 </p>
+              </div>
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Orange County Office</h4>
                 <p>
                     208 S Grand Ave, Santa Ana, CA 92701, USA
                 </p>
