--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -793,14 +793,17 @@
                 <i class="bi bi-geo-alt"></i>
                 <h4>Los Angeles</h4>
                 <p>
-                    7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406, USA
+                    <a href="https://www.google.com/maps/search/7647+Hayvenhurst+Ave,+Unit+26,+Van+Nuys,+CA+91406" target="_blank">
+                    7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406                      
+                    </a>
+
                 </p>
               </div>
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Orange County Office</h4>
                 <p>
-                    208 S Grand Ave, Santa Ana, CA 92701, USA
+                    208 S Grand Ave, Santa Ana, CA 92701
                 </p>
               </div>
 
