--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -790,14 +790,18 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
-                <i class="bi bi-geo-alt" onclick="redirectToMaps()"></i>
+                <a href="https://www.google.com/maps/search/7647+Hayvenhurst+Ave,+Unit+26,+Van+Nuys,+CA+91406" target="_blank">
+                <i class="bi bi-geo-alt" ></i>
+                </a>
                 <h4>Los Angeles</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406
                 </p>
               </div>
               <div class="address">
+                <a href="https://www.google.com/maps?q=208+S+Grand+Ave,+Santa+Ana,+CA+92701" target="_blank">
                 <i class="bi bi-geo-alt"></i>
+                </a>
                 <h4>Orange County Office</h4>
                 <p>
                     208 S Grand Ave, Santa Ana, CA 92701
@@ -892,20 +896,6 @@
         xhr.send(formData);
       });
     </script>
-    <script>
-      function redirectToMaps() {
-        var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-        // Check if the user agent contains 'iPhone' or 'iPad'
-        if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-          window.location.href = 'http://maps.apple.com/?address=7647+Hayvenhurst+Ave+Unit+26+Van+Nuys+CA+91406';
-        } else {
-          // Redirect to Google Maps for other browsers or platforms
-          window.location.href = 'https://www.google.com/maps/search/7647+Hayvenhurst+Ave,+Unit+26,+Van+Nuys,+CA+91406';
-        }
-      }
-    </script>
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
