--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -793,7 +793,7 @@
                 <a href="https://www.google.com/maps/search/7647+Hayvenhurst+Ave,+Unit+26,+Van+Nuys,+CA+91406" target="_blank">
                 <i class="bi bi-geo-alt" ></i>
                 </a>
-                <h4>Los Angeles</h4>
+                <h4>Los Angeles Headquarters</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406
                 </p>
@@ -802,7 +802,7 @@
                 <a href="https://www.google.com/maps?q=208+S+Grand+Ave,+Santa+Ana,+CA+92701" target="_blank">
                 <i class="bi bi-geo-alt"></i>
                 </a>
-                <h4>Orange County Office</h4>
+                <h4>Orange County Branch Office</h4>
                 <p>
                     208 S Grand Ave, Santa Ana, CA 92701
                 </p>
