--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -930,7 +930,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="tos.jsp">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pp.jsp">Privacy policy</a></li>
             </ul>
           </div>
 
