--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -928,7 +928,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="accessibility.jsp">Accessibility Statement</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="tos.jsp">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pp.jsp">Privacy policy</a></li>
             </ul>
