--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -704,7 +704,7 @@
               </div>
               <div class="member-info">
                 <h4>Danny Thomson</h4>
-                <span>Operations manager</span>
+                <span>Technical Director</span>
               </div>
             </div>
           </div>
