--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -512,7 +512,7 @@
                 Experience the California Solar Group Difference: Countless Happy Clients and Completed Projects!
               </h3>
               <p>
-                California Solar Group is the trusted choice for solar panel installation and service. With a proven track record of delighted clients and numerous successful projects under our belt, you can rely on us for unparalleled expertise and exceptional customer care. #CaliforniaSolarGroup #ClientSatisfaction #SolarProjects #RenewableEnergy
+                California Solar Group is the trusted choice for solar panel installation and service. With a proven track record of delighted clients and numerous successful projects under our belt, you can rely on us for unparalleled expertise and exceptional customer care.
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
